Force figures in cells to break at correct point (fixes #42)

--- a/app/assets/stylesheets/application/gotv.scss
+++ b/app/assets/stylesheets/application/gotv.scss
@@ -21,3 +21,7 @@ abbr {
     list-style: none;
   }
 }
+
+.nowrap {
+  white-space: nowrap;
+}
